<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/hidepeople" android:title="@string/hidepeople" />
  <item android:id="@+id/showpeople" android:title="@string/showpeople" android:visible="false"/>
   <item android:id="@+id/del" android:title="@string/delete" />
   <item android:id="@+id/circle" android:title="@string/circle"/>
   <item  android:id="@+id/share"  android:title="@string/share"/>
   <item  android:id="@+id/more"  android:title="@string/more">
   		 <menu>
            <item android:id="@+id/set_as" android:title="@string/set_as" />
            <!--  <item android:id="@+id/set_contact" android:title="@string/setcontact" />-->
            <item android:id="@+id/modify" android:title="@string/modifypicname" />
            <item android:id="@+id/description" android:title="@string/details_panel_title" />
        </menu>
   </item>
</menu>