<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical"
	android:background="@drawable/albumdiwen"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<LinearLayout android:id="@+id/title_bar" style="@style/ToolBar_Top"
	xmlns:android="http://schemas.android.com/apk/res/android">	
	
   	    <RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="1.0">						
			<Button android:id="@+id/lience_return_button" 
		   		android:text="@string/topbtn_back"
		   		style="@style/TopButton_Left"/>

			<TextView android:text="@string/about"
				style="@style/TitleCenterText"/>		
		</RelativeLayout> 	    			
	</LinearLayout>
	
	<ScrollView
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:gravity="center_horizontal"
		  android:orientation="vertical"
		  android:background="@null"
		  android:layout_width="fill_parent"
		  android:layout_height="fill_parent">

  		<TextView 
	  		android:textAppearance="?android:attr/textAppearanceLarge"
	   		android:text="@string/liencesnda"
	    	android:id="@+id/lienceText"
	     	android:layout_width="fill_parent" 
	     	android:layout_height="fill_parent" 
	     	android:layout_gravity="center_horizontal" 
	     	android:gravity="left"
	     	android:textSize="15.0sp"
	     	android:textColor="#FF000000"
	     	android:layout_marginLeft="12dp"
	     	android:layout_marginRight="12dp"
	     	></TextView>

	</ScrollView>	
	
</LinearLayout>



